<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_again"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="183dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:text="@string/confirm"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="183dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:text="@string/cancel"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>